Import Patchlevel 5 of the ISC 2.0 dhcp client plus bug fixes from the beta ISC DHCP version 3 offering.

In message http://www.isc.org/ml-archives/dhcp-client/2000/10/msg00001.html
author Ted Lemon stated "This will not be fixed in any 2.0 release - 2.0
is no longer being maintained." to a reported problem about an
interoperability problem against Microsoft servers.  FreeBSD went with the
ISC client vs. the WIDE client because others convinced me it was better
supported.  Sigh.  I wonder if version 3 will get the same treatment after
its release...

Since FreeBSD generally uses only released contrib products and the ISC
version 3 offering is still in beta, our backs are up against the wall.

The common/options.c rev 1.65 work around for erroneous Microsoft DHCP
servers has been back ported to the version 2.0pl5 client.  Since this
comes from a change in the vendor's own code (and would no doubt also be
committed to the version 2 client if the author were still supporting it),
we will consider this a vendor release and import this as such.

PR:	21658
Submitted by:	Motomichi Matsuzaki <mzaki@e-mail.ne.jp>

Former-commit-id: 7657fb140fbd218ea326d55bd3c43c4077f03d9a